feat: implement subscriptions bounded context for restock platform